src/test/contracts/negative/override_option.mligo
type option = int

let main (x : bool) (y : bool) = ([] : operation list), (None : option)